<resources>
    <string name="app_name">LU_Foodies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lu_foodies">LU Foodies</string>
    <string name="welcome_to_our_app">Welcome To Our App</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="sarah_s_cafe">Sarah\'s Cafe</string>
    <string name="_8_00am_5_00pm">8.00AM-5.00PM</string>
    <string name="pizza">Pizza</string>
    <string name="sandwich">Sandwich</string>
    <string name="_60tk">60Tk</string>
    <string name="foods_you_may_like">Foods you may like</string>
    <string name="your_favourite_food_is_here">your favourite food is here</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
</resources>